<resources>
    <string name="app_name">Payment</string>
    <string name="inputMoney">Ввод денег</string>
    <string name="inputInfo">Информация об оплате</string>
    <string name="cashAddressChkBx">Наличными по адресу</string>
    <string name="mobilePhoneChkBx">С мобильного телефона</string>
    <string name="bankCardChkBx">С банковской карты</string>
    <string name="message">Оплата произведена</string>
</resources>
