<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="354dp"
        android:layout_height="412dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/inputMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputMoney"
            android:inputType="number" />

        <EditText
            android:id="@+id/inputInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inputInfo"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/cashAddressChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cashAddressChkBx"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/mobilePhoneChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobilePhoneChkBx"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/bankCardChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankCardChkBx"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:text="@android:string/ok"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>